--- a/index.html
+++ b/index.html
@@ -7,32 +7,25 @@
         <link href="css/main.min.css" rel="stylesheet" type="text/css">
         <link rel="Shortcut Icon" href="favicon.ico"/>
         <link rel="preload" href="img/beayty.jpg" as="image">
-        <link rel="preload" href="img/laopo6.jpg" as="image">
-        <link rel="preload" href="img/happy.jpeg" as="image">
         <link rel="preload" href="img/nana.jpeg" as="image">
         <link rel="preload" href="img/TheMayDay1.jpg" as="image">
         <link rel="preload" href="img/TheMayDay2.jpg" as="image">
         <link rel="preload" href="img/TheMayDay3.jpg" as="image">
         <link rel="preload" href="img/kaixin.jpg" as="image">
-        <link rel="preload" href="img/laopo7.jpg" as="image">
         <link rel="preload" href="img/xingfu.jpg" as="image">
         <link rel="preload" href="img/kuaile.jpg" as="image">
         <link rel="preload" href="img/qidai.jpg" as="image">
         <link rel="preload" href="img/meiman.jpg" as="image">
         <link rel="preload" href="img/flowers.jpg" as="image">
-        <link rel="preload" href="img/beizi.png" as="image">
         <link rel="preload" href="img/YourSchool.jpg" as="image">
         <link rel="preload" href="img/live.jpg" as="image">
         <link rel="preload" href="img/AcrossTheYears.jpg" as="image">
         <link rel="preload" href="img/Paece.jpg" as="image">
-        <link rel="preload" href="img/liaotian.jpg" as="image">
         <link rel="preload" href="img/DR5.jpg" as="image">
         <link rel="preload" href="img/DR4.jpg" as="image">
-        <link rel="preload" href="img/DR6.jpg" as="image">
         <link rel="preload" href="img/DR1.jpg" as="image">
         <link rel="preload" href="img/DR2.jpg" as="image">
         <link rel="preload" href="img/DR3.jpg" as="image">
-        <link rel="preload" href="img/love1.jpg" as="image">
         <link rel="preload" href="img/live1.jpg" as="image">
         <link rel="preload" href="img/love3.jpg" as="image">
         <link rel="preload" href="img/love4.jpg" as="image">
@@ -40,13 +33,10 @@
         <link rel="preload" href="img/laopo5.jpg" as="image">
         <link rel="preload" href="img/heihie.jpeg" as="image">
         <link rel="preload" href="img/love2.jpg" as="image">
-        <link rel="preload" href="img/baobao.jpeg" as="image">
         <link rel="preload" href="img/lovely.jpg" as="image">
-        <link rel="preload" href="img/laopo1.jpg" as="image">
         <link rel="preload" href="img/laopo2.jpg" as="image">
         <link rel="preload" href="img/laopo3.jpg" as="image">
         <link rel="preload" href="img/laopo4.jpg" as="image">
-        <link rel="preload" href="img/ai.jpg" as="image">
         <link rel="preload" href="img/aini.jpg" as="image">
     </head>
     <body>
@@ -98,7 +88,7 @@
                     v-on:click="togglePrompt(true)"
                     :class="{'clickable': !isTyping }">
                     <span v-if="!isTyping">我想说……</span>
-                    <span v-if="isTyping">我家老公老公正在输入中</span>
+                    <span v-if="isTyping">老公正在输入中</span>
                 </div>
             </div>
             <div id="prompt-bg" v-on:click="togglePrompt(false)"></div>
